feat(report): Added shorthands to enable/disable a task
